syntax = "proto3";

package api;
option go_package = "github.com/onepanelio/core/api/gen";

import "google/api/annotations.proto";

service ModelService {
  rpc DeployModel (DeployModelRequest) returns (DeployModelResponse) {
    option (google.api.http) = {
      post: "/apis/v1beta1/{namespace}/models/deploy"
      body: "*"
    };
  }
}

message NodeSelector {
  string key = 1;
  string value = 2;
}

message ResourceLimits {
  string cpu = 1;
  string memory = 2;
}

message PredictorServer {
  string name = 1;
  string runtimeVersion = 2;
  string storageUri = 3;
  ResourceLimits limits = 4;
}

message Predictor {
  NodeSelector nodeSelector = 1;
  PredictorServer server = 2;
}

message DeployModelRequest {
  string namespace = 1;
  string name = 2;

  Predictor predictor = 3;
}

message DeployModelResponse {
  string name = 1;
}
